<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewTitle" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHeartRate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txtHeartRate" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txtDistance" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txtTime" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtTireSize"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txtTireSize" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtUnits"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txtUnits" />
        <ToggleButton
            android:id="@+id/toggleMetric"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />


    </LinearLayout>


    </LinearLayout>

</ScrollView>

